// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderline renders 0 1`] = `
Array [
  .c0 {
  text-underline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders function 1`] = `
Array [
  .c0 {
  text-underline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders negative number 1`] = `
Array [
  .c0 {
  text-underline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-underline: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-underline: July;
}

@media May {
  .c0 {
    text-underline: August;
  }
}

@media April {
  .c0 {
    text-underline: September;
  }
}

@media January {
  .c0 {
    text-underline: November;
  }
}

@media April {
  .c0 {
    text-underline: August;
  }
}

@media June {
  .c0 {
    text-underline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline: July;
}

@media May {
  .c0 {
    text-underline: August;
  }
}

@media April {
  .c0 {
    text-underline: September;
  }
}

@media January {
  .c0 {
    text-underline: November;
  }
}

@media April {
  .c0 {
    text-underline: August;
  }
}

@media June {
  .c0 {
    text-underline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline: November;
  }
}

@media April {
  .c0 {
    text-underline: January;
  }
}

@media January {
  .c0 {
    text-underline: December;
  }
}

@media April {
  .c0 {
    text-underline: April;
  }
}

@media June {
  .c0 {
    text-underline: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline: November;
  }
}

@media April {
  .c0 {
    text-underline: January;
  }
}

@media January {
  .c0 {
    text-underline: December;
  }
}

@media April {
  .c0 {
    text-underline: April;
  }
}

@media June {
  .c0 {
    text-underline: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-underline: July;
  }
}

@media April {
  .c0 {
    text-underline: August;
  }
}

@media January {
  .c0 {
    text-underline: September;
  }
}

@media April {
  .c0 {
    text-underline: November;
  }
}

@media June {
  .c0 {
    text-underline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline: July;
  }
}

@media April {
  .c0 {
    text-underline: August;
  }
}

@media January {
  .c0 {
    text-underline: September;
  }
}

@media April {
  .c0 {
    text-underline: November;
  }
}

@media June {
  .c0 {
    text-underline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline: January;
  }
}

@media April {
  .c0 {
    text-underline: December;
  }
}

@media January {
  .c0 {
    text-underline: April;
  }
}

@media April {
  .c0 {
    text-underline: May;
  }
}

@media June {
  .c0 {
    text-underline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline: January;
  }
}

@media April {
  .c0 {
    text-underline: December;
  }
}

@media January {
  .c0 {
    text-underline: April;
  }
}

@media April {
  .c0 {
    text-underline: May;
  }
}

@media June {
  .c0 {
    text-underline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders postitive number 1`] = `
Array [
  .c0 {
  text-underline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders string 1`] = `
Array [
  .c0 {
  text-underline: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderline renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textUnderline renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
